--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "json-server --watch data/cities.json --port 9000 --delay 200"
+    "server": "json-server --watch data/cities.json --port 9000 --delay 200",
+    "netlify": "netlify dev"
   },
   "dependencies": {
     "json-server": "^0.17.1",
@@ -17,7 +18,8 @@
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -28,6 +30,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "netlify-cli": "^17.19.0",
     "vite": "^4.4.5",
     "vite-plugin-eslint": "^1.8.1"
   }
