--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "triptrack",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "json-server --watch data/cities.json --port 9000 --delay 200",
     "netlify": "netlify dev"
   },
   "dependencies": {
